fixed gap made by margins

--- a/style.css
+++ b/style.css
@@ -60,11 +60,7 @@ background-color: tomato;
 }
 
 #body{
-	 margin-block-start: 0px;
-	 margin-top: 0px;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-	padding-top: 0px;
+	margin-block-start: 0px;
 	margin: 0px ;
 }
 
@@ -74,13 +70,19 @@ header{
 }
 
 
+hr{
+	margin: 0px 0px;
+ }
+
 li{
 	display:inline-block;
 	outline-width: 9px;
 	
 	
 }
-
+ul{
+	margin: 0
+}
 #contentsection{
 background-color: var(--headColor);
 }
